--- a/build.gradle
+++ b/build.gradle
@@ -194,7 +194,7 @@ task releaseWindows(group: 'build') {
 // OSX
 //--------
 // Running ./gradlew createAppZip builds a standalone macOS app with the JRE bundled. 
-// see https://github.com/crotwell/gradle-macappbundle for more information on how this plugin works
+// See https://github.com/crotwell/gradle-macappbundle
 macAppBundle {
     appOutputDir = 'releases'
     dmgOutputDir = 'releases'
@@ -206,8 +206,10 @@ macAppBundle {
     // Extra values to be added to the apps Info.plist    
     bundleExtras.put('CFBundleDisplayName', 'Chatty')
     bundleExtras.put('NSHumanReadableCopyright', 'Copyright (c) 2014 tduva')
+    bundleExtras.put('LSApplicationCategoryType', 'public.app-category.social-networking')
 
-    // On mac it will pull the JRE from /usr/libexec/java_home. On other systems $JAVA_HOME needs to be set correctly, Otherwise the JRE location can be set manually using jreHome
+    // On mac it will pull the JRE from /usr/libexec/java_home. On other systems $JAVA_HOME
+    // needs to be set correctly, otherwise the JRE location can be set manually using jreHome
     bundleJRE = true
 }
 
